--- a/javascript_input_tech.html
+++ b/javascript_input_tech.html
@@ -3,65 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Output technique javascript</title>
+    <title>Input Techniques in JavaScript</title>
+    <style>
+        /* Basic reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            padding: 30px;
+        }
+
+        .note-section {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            max-width: 900px;
+            margin: auto;
+        }
+
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 20px;
+            border-left: 5px solid #3498db;
+            padding-left: 10px;
+        }
+
+        h3 {
+            color: #34495e;
+            margin-top: 20px;
+            font-size: 20px;
+        }
+
+        p {
+            margin: 10px 0;
+        }
+
+        ol {
+            padding-left: 20px;
+            margin-top: 15px;
+        }
+
+        dl {
+            margin-top: 10px;
+            padding-left: 15px;
+        }
+
+        dt {
+            font-weight: bold;
+            margin-top: 10px;
+            color: #2980b9;
+        }
+
+        dd {
+            margin-left: 20px;
+            color: #2c3e50;
+            padding: 4px 0;
+        }
+
+        pre {
+            background-color: #272822;
+            color: #f8f8f2;
+            padding: 15px;
+            border-radius: 5px;
+            overflow-x: auto;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 15px;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body onload="bodyload()">
-    <h1>Javascript Input techniques</h1>
-    <p>Input is process of accepting data from user</p>
+    <div class="note-section">
+        <h1>JavaScript Input Techniques</h1>
 
-    <ol>
-        <li><h3>Query String</h3>
-            <p>Input is passed using URL - accessing useing window.location.search</p>
-            <dl>
+        <p>Input is the process of accepting data from the user in different ways.</p>
 
-        <dt>Category</dt>
+        <ol>
+            <li>
+                <h3>Query String</h3>
+                <p>Input is passed using the URL. You can access it via <code>window.location.search</code>.</p>
 
-        <dd id="lblCategory"></dd>
+                <dl>
+                    <dt>Category:</dt>
+                    <dd id="lblCategory">[waiting for input]</dd>
 
-        <dt>Product</dt>
+                    <dt>Product:</dt>
+                    <dd id="lblProduct">[waiting for input]</dd>
 
-        <dd id="lblProduct"></dd>
+                    <dt>Brand:</dt>
+                    <dd id="lblBrand">[waiting for input]</dd>
+                </dl>
 
-        <dt>Brand</dt>
+                <pre>
+// Example URL:
+// page.html?category=Phones&product=Galaxy&brand=Samsung
 
-        <dd id="lblBrand"></dd>
+let params = new URLSearchParams(window.location.search);
+document.getElementById("lblCategory").textContent = params.get("category");
+document.getElementById("lblProduct").textContent = params.get("product");
+document.getElementById("lblBrand").textContent = params.get("brand");
+                </pre>
+            </li>
 
-    </dl>
-        </li>
+            <li>
+                <h3>Prompt</h3>
+                <p>The <code>prompt()</code> method displays a dialog to take user input directly.</p>
 
-    </ol>
+                <pre>
+let name = prompt("Enter your name:");
+console.log("User entered: " + name);
+                </pre>
+            </li>
+        </ol>
+    </div>
 
-    <h3>Propmt</h3>
+    <script>
+        function bodyload() {
+            const params = new URLSearchParams(window.location.search);
 
+            document.getElementById("lblCategory").textContent = params.get("category") || "[not provided]";
+            document.getElementById("lblProduct").textContent = params.get("product") || "[not provided]";
+            document.getElementById("lblBrand").textContent = params.get("brand") || "[not provided]";
+        }
+
+        // Example prompt usage
+        prompt("Enter Prompt");
+    </script>
 </body>
-<script>
-
-    function bodyload(){
-        let params = new URLSearchParams(window.location.search)
-
-        document.getElementById("lblCategory").textContent = params.get("category")
-        document.getElementById("lblProduct").textContent = params.get('product')
-        document.getElementById("lblBrand").textContent = params.get('brand')
-        
-
-    }
-
-prompt("Enter Prompt")
-// let result  = new URLSearchParams(window.location.search)
-
-// let name = result.get("name");
-// let age = result.get("age");
-
-// console.log("name is " + name + "and Age is " + age)
-
-// let obect_1 = {
-//     name : "name",
-//     age : 30
-// } 
-
-// const params = new URLSearchParams(obect_1);
-
-// console.log(params.toString())
-
-</script>
 </html>
