Added string manuplication part - 2

--- a/javascript_string_Eg.html
+++ b/javascript_string_Eg.html
@@ -67,25 +67,41 @@
     //    }
 
     //    caseSwap("welcome to javascript ")
-    function extractEmail(email){
+    // function extractEmail(email){
 
-        let [userName , domain] = email.split('@')
+    //     let [userName , domain] = email.split('@')
 
-        console.log("User name is :" + userName)
-        console.log("Domain is :"+ domain)
-    }
+    //     console.log("User name is :" + userName)
+    //     console.log("Domain is :"+ domain)
+    // }
 
 
-    let email = prompt("Enter Email ID")
+    // let email = prompt("Enter Email ID")
 
-    extractEmail(email)
+    // extractEmail(email)
 
     // var email = "Deepakjadhav@gmail.com"
 
     // let [name , email2]= email.split('@')
     // console.log(name + email2)
 
-    </script>
+    // Practice 
+
+    name = "john snow."
+
+    // console.log(name.length)
+    // console.log(name.indexOf('n'))
+    // console.log(name.lastIndexOf('n'))
+    // console.log(name.startsWith('j'))
+    // console.log(name.endsWith('w'))
+
+    console.log(name.trim().length)
+    console.log(name.split(" ")) 
+    console.log(name.slice(0,3))
+    console.log(name.replace("john", "Deepak"))
+    console.log(name.includes("snow"))
+
+    // </script>
 </head>
 
 <body>
