--- a/javascript_switch.html
+++ b/javascript_switch.html
@@ -14,6 +14,20 @@
     switch(n){
         case 1:
             document.write("This is 1")
+            break;
+        case 2:
+            document.write("This is 2")
+            break;
+        case 3:
+            document.write("this is 3")
+            break;
+        case 4:
+            document.write("THis is 4")
+            break;
+        default:
+            document.write("This is default")
+            break;
+            
     }
 </script>
 </html>
